# bitoguard-hackathon

./: .dockerignore  .gitignore  .postman.json  AGENTS.md  CLAUDE.md  DEPLOYMENT_SUMMARY.md  IMPROVEMENT_PLAN.md  Makefile  OFFICIAL_EXPERIMENT_SUMMARY_20260317.md  README.md  README_AWS.md  V3_IMPROVEMENT_PLAN.md  compose.yaml  phase2_full_params.py  submission_provisional_graphsage_mainline.json
bitoguard_core/: Dockerfile  Dockerfile.processing  Dockerfile.training  OFFICIAL_EXPERIMENT_SUMMARY_20260319.md  README.md  __init__.py  config.py  hardware.py  hpo_catboost.py  hpo_xgboost.py  hybrid_primary_locked_eval_with_graphsage.py  hybrid_primary_locked_eval_with_graphsage_and_tuned_xgb.py  measure_xgb_bias.py  oracle_client.py  provisional_submission_graphsage_mainline.py  pyproject.toml  requirements.txt  source_client.py  xgb_grid_nested_ablation.py
bitoguard_core/api/: __init__.py  main.py
bitoguard_core/artifacts/: demo_script.md  official_bundle.json  validation_report.json
bitoguard_core/db/: schema.py  store.py
bitoguard_core/features/: build_anomaly_features.py  build_features.py  crypto_features.py  dormancy.py  event_ngram_features.py  graph_bipartite.py  graph_features.py  graph_propagation.py  ip_features.py  profile_features.py  registry.py  rule_features.py  sequence_features.py  statistical_features.py  swap_features.py  trading_features.py  twd_features.py  typology_features.py
bitoguard_core/ml_pipeline/: sagemaker_e15_train.py  sagemaker_hpo.py  sagemaker_hpo_lgbm.py  train_entrypoint.py
bitoguard_core/models/: __init__.py  ablate_iforest.py  (+13 more)
(+301 files in other folders)
