[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bitoguard"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["bitoguard*", "models*", "features*", "services*",
           "pipeline*", "api*", "db*"]

[tool.pytest.ini_options]
addopts = "-m 'not integration'"
markers = [
    "integration: requires live scored data in bitoguard.duckdb (run manually after make score)",
]
